--- a/src/client/app/src/App.css
+++ b/src/client/app/src/App.css
@@ -1,31 +1,62 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
 }
+
+.App-navBar {
+  background-color: rgb(11, 115, 119);
+  font-size: 1.125em;
+  border: .5em groove red;
+  height: 10vmax;  
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+/* 
+  rgb (13, 160, 165);
+ */
+
+.App-navBar-title {
+  border: 2px groove white;
+  width: 33%;
+  flex-direction: column;
+  align-items: flex-start;
+  padding-left: 2em;
+  
+}
+ .App-navBar-links ul{
+   border: 2em groovy black;
+   width: 33%;
+   flex-direction: column;
+   align-items: flex-start;
+}
+.App-navBar-links ul li{
+  border: dashed orange;
+  width: 20%;
+  padding: 0 1em;
+}
+
+.center {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.inline{
+  display:inline;
+}
+
+
+
+
+
+/*
+*   SPINNING LOGO 
+*********************** *************************
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 5vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
 }
 
 @keyframes App-logo-spin {
@@ -36,3 +67,11 @@
     transform: rotate(360deg);
   }
 }
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+} 
+
+****************************************************/
